# bc-automated-tests-doc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TEST_RESULTS.md  pyproject.toml
.github/: copilot-instructions.md
.pre-commit-cache/: db.db  patch1757343432-3991
chapters/: 03_chapter_12_why-automated-testing.md  04_chapter_13_when-to-use-automated-testing.md  05_chapter_14_what-is-automated-testing.md  06_chapter_15_summary.md  09_chapter_18_the-five-pillars-of-the-testability-framework.md  11_chapter_20_chapter-3-the-test-tool-and-standard-tests.md  16_chapter_25_section-3-designing-and-building-automated-tests-for-microsoft-dynamics-365-business-central.md  17_chapter_26_chapter-4-test-design.md  19_chapter_28_understanding-test-case-design-patterns.md  21_chapter_30_using-customer-wish-as-test-design.md  chapter_01_cover.md  chapter_02_title-page.md  chapter_03_copyright-and-credits.md  chapter_04_dedication.md  chapter_05_about-packt.md  chapter_06_foreword.md  chapter_07_contributors.md  chapter_08_table-of-contents.md  chapter_09_preface.md  chapter_10_section-1-automated-testing-a-general-overview.md  chapter_11_chapter-1-introduction-to-automated-testing.md  chapter_12_why-automated-testing.md  chapter_13_when-to-use-automated-testing.md  chapter_14_what-is-automated-testing.md  chapter_15_summary.md  chapter_16_section-2-automated-testing-in-microsoft-dynamics-365-business-central.md  chapter_17_chapter-2-the-testability-framework.md  chapter_18_the-five-pillars-of-the-testability-framework.md  chapter_19_summary.md  chapter_20_chapter-3-the-test-tool-and-standard-tests.md  chapter_21_test-tool.md  chapter_22_standard-tests.md  chapter_23_standard-libraries.md  chapter_24_summary.md  chapter_25_section-3-designing-and-building-automated-tests-for-microsoft-dynamics-365-business-central.md  chapter_26_chapter-4-test-design.md  chapter_27_no-design-no-test.md  chapter_28_understanding-test-case-design-patterns.md  chapter_29_understanding-test-data-setup-design-patterns.md  chapter_30_using-customer-wish-as-test-design.md  (+3 more)
content/: 01_chapter_10_section-1-automated-testing-a-general-overview.md  02_chapter_11_chapter-1-introduction-to-automated-testing.md  07_chapter_16_section-2-automated-testing-in-microsoft-dynamics-365-business-central.md  08_chapter_17_chapter-2-the-testability-framework.md  09_chapter_18_the-five-pillars-of-the-testability-framework.md  10_chapter_19_summary.md  12_chapter_21_test-tool.md  13_chapter_22_standard-tests.md  14_chapter_23_standard-libraries.md  15_chapter_24_summary.md  18_chapter_27_no-design-no-test.md  19_chapter_28_understanding-test-case-design-patterns.md  20_chapter_29_understanding-test-data-setup-design-patterns.md  22_chapter_31_summary.md  23_chapter_32_chapter-5-from-customer-wish-to-test-automation-the-basics.md  24_chapter_33_from-customer-wish-to-test-automation.md
doc/: TODO-validation-cleanup.md  design.md  manifest-schema.md  prd.md  validation-design.md
docs/: CopilotAgentSetup.md
fonts/: LICENSE.txt
scripts/: __init__.py  fix_md.py  gen_fixtures.py  local-check.sh  reflow_md.py  validate-md.sh
tests/: conftest.py  test_cli.py  test_dsl_bboxes.py  test_exporter.py  test_figures.py  test_fixture_stability.py  test_fonts_vendored.py  test_footnotes.py  test_headings.py  test_ingest.py  (+6 more)
(+27 files in other folders)
